--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,9 @@
     <title>Daniela's blog</title>
   </head>
   <body>
+    <a href="/">Home</a>
+    <a href="/about/">About</a>
+
     <h1>Hello there, coders</h1>
     <img src="https://i.kym-cdn.com/photos/images/original/001/551/018/147.jpg" />
   </body>
