--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,6 +1,3 @@
----
----
-
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -14,7 +11,6 @@
     <a href="/about/">About</a>
     <a href="/blog/">Blog</a>
 
-    <h1>Hello there, coders</h1>
-    <img src="https://i.kym-cdn.com/photos/images/original/001/551/018/147.jpg" />
+    <h1>My learning journey blog</h1>
   </body>
 </html>
