added first components

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,12 @@
 ---
+import "../styles/global.css";
+import Footer from "../components/Footer.astro";
+import Navigation from "../components/Navigation.astro";
+
+const pageTitle = "About me";
+const skillColor = "red";
+const fontWeight = "bold";
+const textCase = "uppercase";
 ---
 
 <html lang="en">
@@ -7,14 +15,23 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>Daniela's blog</title>
+    <title>{pageTitle}</title>
+    <style define:vars={{ skillColor, fontWeight, textCase }}>
+      h1 {
+        color: purple;
+        font-size: 4rem;
+      }
+      .skill {
+        color: var(--skillColor);
+        font-weight: var(--fontWeight);
+        text-transform: var(--textCase);
+      }
+    </style>
   </head>
   <body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
+    <Navigation />
 
-    <h1>About me</h1>
+    <h1>{pageTitle}</h1>
     <p>
       Hi, I'm Daniela, I'm a software engineer and I love to learn new things. Having studied foreign languages for many years, I stumbled upon HTML
       and CSS and have been fascinated by the frontend side of programming ever since, marveling at the enormous creativity this world offers. I like
@@ -22,5 +39,6 @@
       visually appealing and functional that people can interact with and enjoy. I've decided to start this blog as a memento for myself to remember
       what I've learned in my day-to-day coding and to share my knowledge with others. I hope you'll find something useful here!
     </p>
+    <Footer />
   </body>
 </html>
