--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,8 @@
 ---
+import "../styles/global.css";
+
+import Navigation from "../components/Navigation.astro";
+const pageTitle = "Daniela's blog";
 ---
 
 <html lang="en">
@@ -7,12 +11,10 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>Daniela's blog</title>
+    <title>{pageTitle}</title>
   </head>
   <body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
+    <Navigation />
 
     <h1>Hello there, coders</h1>
     <img src="https://i.kym-cdn.com/photos/images/original/001/551/018/147.jpg" />
