--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,16 +1,27 @@
+---
+import "../styles/global.css";
+import Navigation from "../components/Navigation.astro";
+
+const pageTitle = "Blog";
+---
+
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>Daniela's blog</title>
+    <title>{pageTitle}</title>
   </head>
   <body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
+    <Navigation />
 
     <h1>My learning journey blog</h1>
+    <p>Here you will find all of my blog posts</p>
+    <ul>
+      <li><a href="/posts/post-1/">Post 1</a></li>
+      <li><a href="/posts/post-2/">Post 2</a></li>
+      <li><a href="/posts/post-3/">Post 3</a></li>
+    </ul>
   </body>
 </html>
