modified content and fixed posts not showing

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import "../styles/global.css";
 
 import Navigation from "../components/Navigation.astro";
+import Footer from "../components/Footer.astro";
 const pageTitle = "Daniela's blog";
 ---
 
@@ -17,6 +18,17 @@ const pageTitle = "Daniela's blog";
     <Navigation />
 
     <h1>Hello there, coders</h1>
-    <img src="https://i.kym-cdn.com/photos/images/original/001/551/018/147.jpg" />
+    <!-- inserire immagine pucciosa -->
+    <p>
+      Welcome to my learning blog! Some time ago I found out about the concept of <a href="https://blackgirlbytes.dev/how-to-learn-in-public"
+        >learning in public</a
+      > but I never really had the chance to try it out. That was until recently I heard lots of good things about Astro, and knowing it is perfect to
+      create a blog, I thought it would be a great opportunity to get two birds with one stone and both learn about it and create a personal blog in which
+      jot down everything new I come across and save it for future reference (mine and others both). As I'm still learning about Astro's features the site
+      will probably change a lot in the next couple of weeks/months, as I will be adding new features and trying out new things. So here you go, come with
+      me on this amazing learning journey!
+    </p>
+
+    <Footer />
   </body>
 </html>
