--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,8 +1,27 @@
 ---
 import Social from "./Social.astro";
+
+const year = new Date().getFullYear();
 ---
 
 <footer>
-  <Social platform="GitHub" username="daniela-bonvini" />
-  <Social platform="LinkedIn" username="daniela-bonvini" />
+  <div>
+    <Social platform="GitHub" username="daniela-bonvini" />
+    <Social platform="LinkedIn" username="daniela-bonvini" />
+  </div>
 </footer>
+<style>
+  div {
+    margin: 4rem 0;
+    text-align: center;
+  }
+
+  small {
+    font-family: "Josefin Sans", sans-serif;
+  }
+
+  small a {
+    color: #375a7f;
+    text-decoration: none;
+  }
+</style>
