--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,9 +1,15 @@
 ---
+import ThemeIcon from "./ThemeIcon.astro";
 ---
 
-<div class="nav-links">
-  <a href="/">Home</a>
-  <a href="/about/">About</a>
-  <a href="/blog/">Blog</a>
-  <a href="/tags/">Tags</a>
+<div class="nav-bar">
+  <div class="title-link">
+    <a href="/">Home page</a>
+  </div>
+  <div class="nav-links">
+    <a href="/blog/">Blog</a>
+    <a href="/tags/">Tags</a>
+    <a href="https://github.com" target="_blank">GitHub</a>
+    <ThemeIcon />
+  </div>
 </div>
