--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,5 +1,5 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
+import Layout from "./Layout.astro";
 const { frontmatter } = Astro.props;
 ---
 
@@ -24,19 +24,9 @@ const { frontmatter } = Astro.props;
   }
 </style>
 
-<BaseLayout pageTitle={frontmatter.title}>
+<Layout pageTitle={frontmatter.title}>
   <p><em>{frontmatter.description}</em></p>
   <p>Written by {frontmatter.author} on {frontmatter.pubDate.slice(0, 10)}</p>
   <img src={frontmatter.image?.url} width="300" alt={frontmatter.image?.alt} />
-
-  <!-- <div class="tags">
-    {
-      frontmatter.tags.map((tag) => (
-        <p class="tag">
-          <a href={`/tags/${tag}`}>{tag}</a>
-        </p>
-      ))
-    }
-  </div> -->
   <slot />
-</BaseLayout>
+</Layout>
