--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,15 +1,21 @@
 ---
-import "../styles/global.css";
-import BaseLayout from "../layouts/BaseLayout.astro";
-import BlogPost from "../components/BlogPost.astro";
+import Layout from "../layouts/Layout.astro";
+import Card from "../components/Card.astro";
+const pageTitle = "Posts";
 const allPosts = await Astro.glob("../pages/posts/*.md");
-const pageTitle = "Blog";
 ---
 
-<BaseLayout pageTitle={pageTitle}>
-  <h1>My learning journey blog</h1>
-  <p>Here you will find all of my blog posts</p>
-  <ul>
-    {allPosts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
+<Layout pageTitle={pageTitle}>
+  <div class="gif">
+    <img width="300" height="259" alt="RaccoonLaptopGif" src="/blog.webp" />
+  </div>
+  <h2>Blog</h2>
+  <h4>Here you will find all of my blog posts</h4>
+  <ul role="list" class="link-card-grid">
+    {
+      allPosts.map((post) => (
+        <Card url={post.url} title={post.frontmatter.title} body={post.frontmatter.description} image={post.frontmatter?.image} />
+      ))
+    }
   </ul>
-</BaseLayout>
+</Layout>
