--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -15,6 +15,7 @@ const url = platform.toLowerCase() === "linkedin" ? `https://www.${platform}.com
 </style>
 
 <p class="logo-container">
-  <img src={`/images/${platform.toLowerCase()}_icon.png`} width="25px" height="25px" alt={`${platform}`} class="logo-images" /> Keep in contact with me
-  on <a href={url}>{platform}</a>
+  <img src={`/${platform.toLowerCase()}_icon.png`} width="25px" height="25px" alt={`${platform}`} class="logo-images" /> Keep in contact with me on <a
+    href={url}>{platform}</a
+  >
 </p>
