added about page and fixed css

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -8,8 +8,8 @@ import ThemeIcon from "./ThemeIcon.astro";
   </div>
   <div class="nav-links">
     <a href="/blog/">Blog</a>
+    <a href="/about/">About</a>
     <a href="/tags/">Tags</a>
-    <a href="https://github.com" target="_blank">GitHub</a>
     <ThemeIcon />
   </div>
 </div>
