--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,33 +9,20 @@ const pageTitle = "Home page";
   </div>
   <h1>Daniela Bonvini</h1>
   <small>Software engineer (Frontend development)</small>
-  <h2>About me</h2>
+  <h2>Hello there, coders!</h2>
   <p>
-    Hi, I'm Daniela, I'm a software engineer and I love to learn new things. Having studied foreign languages for many years, I stumbled upon HTML and
-    CSS and have been fascinated by the frontend side of programming ever since, marveling at the enormous creativity this world offers. I like to
-    think of the web as a blank canvas, and I'm always excited to craft something new with code. I love the challenge of creating something visually
-    appealing and functional that people can interact with and enjoy. I've decided to start this blog as a memento for myself to remember what I've
-    learned in my day-to-day coding and to share my knowledge with others. I hope you'll find something useful here!
+    Welcome to my learning blog! Some time ago I found out about the concept of <b><em>learning in public</em></b> but I never really had the chance to
+    try it out. That was until recently I heard lots of good things about Astro, and knowing it is perfect to create a blog, I thought it would be a great
+    opportunity to get two birds with one stone and both learn about a new cool and create a personal blog on which jot down everything new I come across
+    and save it for future reference <em>(mine and others both)</em>.<br />
+    As I'm still learning about Astro's features the site will probably change a lot in the next couple of weeks/months, as I will be adding new features
+    and trying out new things. So here you go, come with me on this amazing learning journey!
   </p>
   <div class="button">
     <a href="/blog/">
       <button>My blog posts</button>
     </a>
   </div>
-  <h2>Skills</h2>
-  <div class="link-images">
-    <img width="46" height="46" alt="Angular" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/angularjs/angularjs-plain.svg" />
-    <img width="46" height="46" alt="CSS" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-plain.svg" />
-    <img width="46" height="46" alt="HTML" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-plain.svg" />
-    <img width="46" height="46" alt="TypeScript" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/typescript/typescript-plain.svg" />
-    <img width="46" height="46" alt="JavaScript" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-plain.svg" />
-  </div>
-  <h2>Interests</h2>
-  <p>
-    I love RPG videogames (yes, the 100-hour Japanese kind), reading, and cooking plant-based meals. I'm also a big fan of the fantasy genre and I'm
-    always up for a good movie or TV show. I'm a big animal lover and I have two cats named Julie Mao and Coraline, who are the cutest thing in the
-    world.
-  </p>
 </Layout>
 <style>
   /* small */
