--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,152 +1,167 @@
 /* Import fonts */
 @font-face {
-    font-family: 'Pacifico';
-    src: url('/fonts/Pacifico-Regular.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+  font-family: "Pacifico";
+  src: url("/fonts/Pacifico-Regular.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 @font-face {
-    font-family: 'Josefin Sans';
-    src: url('/fonts/JosefinSans-Regular.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+  font-family: "Josefin Sans";
+  src: url("/fonts/JosefinSans-Regular.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 
 /* Global styles */
+
 html {
-    background-color: #1e1e2e;
-    color: #fdebf3;
+  background-color: #1e1e2e;
+  color: #fdebf3;
 }
 
 body {
-    max-width: 540px;
-    margin: 0 auto;
-    text-align: justify;
+  max-width: 540px;
+  margin: 0 auto;
+  text-align: justify;
 }
 
 /* Headings */
-h1, h2 {
-    font-family: 'Pacifico', cursive;
-    font-weight: normal;
+h1,
+h2 {
+  font-family: "Pacifico", cursive;
+  font-weight: normal;
 }
 
 h1 {
-    font-size: 2.6em;
-    margin: 0;
+  font-size: 2.6em;
+  margin: 0;
 }
 
 h2 {
-    text-decoration: underline #375a7f;
-    text-decoration-thickness: 4px;
-    text-underline-offset: 6px;
-    font-size: 2.1em;
-    margin-bottom: 0;
+  text-decoration: underline #375a7f;
+  text-decoration-thickness: 4px;
+  text-underline-offset: 6px;
+  font-size: 2.1em;
+  margin-bottom: 0;
 }
 
 /* Paragraphs */
 p {
-    font-family: 'Josefin Sans', sans-serif;
-    font-size: 1.1em;
-    hyphens: auto;
-    line-height: 1.5;
-    text-indent: 1em;
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 1.1em;
+  hyphens: auto;
+  line-height: 1.5;
+  text-indent: 1em;
 }
-
 
 /* Gifs */
 .gif {
-    margin: 20px 0 0 0;
-    text-align: center;
+  margin: 20px 0 0 0;
+  text-align: center;
 }
 
 /* Navigation Bar */
+.header-container {
+  background-color: #e6bcc6;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+}
+
 .nav-bar {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    margin-top: 0.8rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 0.5rem 1rem;
 }
 
-.title-link, .nav-links {
-    font-family: 'Pacifico', cursive;
-    font-size: 1.3rem;
+.title-link,
+.nav-links {
+  font-family: "Pacifico", cursive;
+  font-size: 1.3rem;
 }
 
-.title-link a, .nav-links a {
-    color: #fdebf3;
-    text-decoration: none;
+.title-link a,
+.nav-links a {
+  color: #fdebf3;
+  text-decoration: none;
 }
 
-.title-link a:hover, .nav-links a:hover, a:focus {
-    text-decoration: underline #375a7f;
-    text-decoration-thickness: 2px;
-    text-underline-offset: 6px;
+.title-link a:hover,
+.nav-links a:hover,
+a:focus {
+  text-decoration: underline #375a7f;
+  text-decoration-thickness: 2px;
+  text-underline-offset: 6px;
 }
 
 .nav-links {
-    font-family: 'Josefin Sans', sans-serif;
-    font-size: 1.1rem;
-    text-align: right;
+  align-items: center;
+  display: flex;
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 1.1rem;
+  justify-content: space-between;
+  text-align: right;
 }
 
 .nav-links a {
-    margin: 0 13px;
+  margin: 0 13px;
 }
 
 /* Card listing */
 .link-card-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-    gap: 1rem;
-    padding: 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
+  gap: 1rem;
+  padding: 0;
 }
 
 /* Theme Icon */
 html.light {
-    background-color: #fdebf3;
-    color: #1e1e2e;
+  background-color: var(--millenial-pink);
+  color: #1e1e2e;
 }
 
 .light .title-link a {
-    color: #1e1e2e;
+  color: #1e1e2e;
 }
 
 .light .card-title {
-    color: #1e1e2e; 
+  color: #1e1e2e;
 }
 
 .light .card-txt {
-    color: #1e1e2e; 
+  color: #1e1e2e;
 }
 
 .light .nav-links a {
-    color: #1e1e2e;
+  color: #1e1e2e;
 }
 
 .light .link-card > a {
-    color: #1e1e2e; 
+  color: #1e1e2e;
 }
 
 /* Media Query */
 @media only screen and (max-width: 600px) {
-    body {
-        width: 320px;
-    }
+  body {
+    width: 320px;
+  }
 
-    .nav-bar {
-        display: initial;
-    }
+  .nav-bar {
+    display: initial;
+  }
 
-    .title-link {
-        text-align: center;
-    }
+  .title-link {
+    text-align: center;
+  }
 
-    .nav-links {
-        text-align: center;
-    }
+  .nav-links {
+    text-align: center;
+  }
 
-    .nav-links a {
-        margin: 0 11px;
-    }
+  .nav-links a {
+    margin: 0 11px;
+  }
 }
