fixed about error

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -23,8 +23,8 @@ const pageTitle = "About me";
   </div>
   <h2>Interests</h2>
   <p>
-    I love RPG videogames (yes, the 100-hour Japanese kind), reading, and cooking plant-based meals. I'<main></main> a big fan of the fantasy genre and
-    I'm always up for a good movie or TV show, moreso if it is in a cartoon form. I'm a big animal lover and I have two cats named Julie Mao and Coraline,
-    who are the cutest thing in the world.
+    I love RPG videogames (yes, the 100-hour Japanese kind), reading, and cooking plant-based meals. I'm a big fan of the fantasy genre and I'm always
+    up for a good movie or TV show, moreso if it is in a cartoon form. I'm a big animal lover and I have two cats named Julie Mao and Coraline, who
+    are the cutest thing in the world.
   </p>
 </Layout>
