--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -13,3 +13,11 @@ import ThemeIcon from "./ThemeIcon.astro";
     <ThemeIcon />
   </div>
 </div>
+
+<style>
+  .nav-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+</style>
