--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -28,3 +28,24 @@ const pageTitle = "About me";
     are the cutest thing in the world.
   </p>
 </Layout>
+
+<style>
+  /* Skill images */
+  .link-images {
+    margin: 1em;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  @media only screen and (max-width: 600px) {
+    .link-images {
+      margin: 1em;
+
+      img {
+        height: 30px;
+        width: 30px;
+        margin: 16px 1px;
+      }
+    }
+  }
+</style>
