--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -17,7 +17,7 @@ const year = new Date().getFullYear();
   }
 
   small {
-    font-family: "Josefin Sans", sans-serif;
+    font-family: "Inter", sans-serif;
   }
 
   small a {
