modified footer and added talks section

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,6 +8,7 @@ const year = new Date().getFullYear();
   <div>
     <Social platform="GitHub" username="daniela-bonvini" />
     <Social platform="LinkedIn" username="daniela-bonvini" />
+    <Social link="https://dev.to/danielabonvini" platform="DEV" />
   </div>
 </footer>
 <style>
