--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -8,7 +8,8 @@ import ThemeIcon from "./ThemeIcon.astro";
   </div>
   <div class="nav-links">
     <a href="/blog/">Blog</a>
-    <a href="/about/">About</a>
+    <a href="/about/">About me</a>
+    <a href="/talks/">Talks</a>
     <a href="/tags/">Tags</a>
     <ThemeIcon />
   </div>
