--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -18,5 +18,6 @@ const alt = platform ? `${platform} logo` : undefined;
 </style>
 
 <p class="logo-container">
-  <img src={src} width="25px" height="25px" alt={alt} class="logo-images" /> Keep in contact with me on <a href={url} target="_blank">{platform}</a>
+  <img src={src} width="25px" height="25px" alt={alt} class="logo-images" />
+  <a href={url} target="_blank">{platform}</a>
 </p>
