--- a/src/pages/talks.astro
+++ b/src/pages/talks.astro
@@ -9,7 +9,7 @@ const pageTitle = "Talks";
     <dt>We Are Developers LIVE - Angular Day 2023</dt>
     <dd><a href="https://www.youtube.com/watch?v=EcC8rjqt3Dw&t=7402s" target="_blank">Angular Signals: What's all the fuss about?</a></dd>
     <dt>Angular Day 2023</dt>
-    <dd><a href="https://2023.angularday.it/talks_speakers/#daniela-bonvini" target="_blank">Angular Signals: What's all the fuss about?</a></dd>
+    <dd><a href="https://www.youtube.com/watch?v=DQrXHmePDeY&t=10s" target="_blank">Angular Signals: What's all the fuss about?</a></dd>
     <dt>CSS Day 2024</dt><dd>
       <a href="https://2024.cssday.it/talks_speakers/#css:-odissea-nello-spazio-3" target="_blank">CSS: odissea nello spazio</a>
     </dd>
@@ -23,7 +23,8 @@ const pageTitle = "Talks";
     <li><a href="https://dev.to/sparkfabrik/how-not-to-contribute-to-open-source-77k" target="_blank">How (not) to contribute to open source</a></li>
     <li>
       <a href="https://dev.to/sparkfabrik/angular-signals-whats-all-the-fuss-about-3hm5" target="_blank"
-        >Angular Signals: what's all the fuss about?</a>
+        >Angular Signals: what's all the fuss about?</a
+      >
     </li>
   </ul>
   <ul></ul>
